2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
	*  watraysimple/simpledocumentmanager.vala:
	*  watraysimple/simpleconfiguremanager.vala:
	*  watraysimple/Makefile.am:
	*  watraysimple/simpleplugin.vala:
	*  watraysimple/simpleprojectmanager.vala:
	*  watraysimple/simpleconfiguredialog.vala:
	*  configure.ac:
	*  watray/watraypreferencemanager.vala:
	
	Added configure support for simple plugin.
	
	*  po/es.po:
	*  po/POTFILES.in:
	*  po/POTFILES.skip:

	Updated spanish translation.

2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:

	Added website to the about dialog.

2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:
	*  ui/ui.xml:

	Added about dialog and placeholders in ui.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:

	Added menu support to project's items.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:

	Improved item and project selection.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:

	Added Project.selected and Project.item_selected signals.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:

	Added get_items method to return a list of child items.

2009-02-01  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/Makefile.am:

	Use Value instead of ItemInfo to hold the data of the item.

2009-01-30  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpleplugin.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraymainwindowinterface.vala:
	*  ui/ui.xml:
	*  po/es.po:

	Improve menu and toolbar managment using UIManager.

2009-01-27  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
