@@ -25,7 +25,6 @@ libwatraysimple_la_VALASOURCES = \
 	simpleplugin.vala \
 	simpledocumentmanager.vala \
 	simpledocumentview.vala \
-	simpleprojectmanager.vala \
 	$(NULL)
 
 
